<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="aftab1">Sunrise</string>
    <string name="aftab2">Sunset</string>
    <string name="aftab3">Midnight</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_praytime">in meter (optional)</string>
    <string name="app_name">تقویم فارسی</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_language">Application Language</string>
    <string name="athan">Athan</string>
    <string name="athan_alarm">Athan Alarm</string>
    <string name="athan_alarm_summary">Prayers to trigger the alarm for</string>
    <string name="athan_disabled_summary">To set the Athan alarm, choose a location or enter the coordinates above</string>
    <string name="athan_gap">Athan Gap</string>
    <string name="athan_gap_summary">How long ahead of the Athan should the alarm be triggered (in minutes)</string>
    <string name="athan_sound">Athan Sound</string>
    <string name="athan_volume">Athan Volume</string>
    <string name="athan_volume_summary">Set the volume for the alarm</string>
    <string name="azan1">Fajr</string>
    <string name="azan2">Dhuhr</string>
    <string name="azan3">Asr</string>
    <string name="azan4">Maghrib</string>
    <string name="azan5">Isha</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calendar_font">Calendar Font</string>
    <string name="calendar_font_summary">Change the font for the calendar</string>
    <string name="calendar_language">Calendar Language</string>
    <string name="calendar_language_summary">The language to show the month and day names in</string>
    <string name="cancel">لغو</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="ches_cancel_dialog">انصراف</string>
    <string name="ches_install_dialog">نصب</string>
    <string name="clock">Clock</string>
    <string name="clock_in_24">Clock in 24 hour</string>
    <string name="clock_on_widget">Clock on the Widget</string>
    <string name="closeDrawer">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compass">Compass</string>
    <string name="compass_not_found">Compass sensor not found</string>
    <string name="dari_months">Dari Months</string>
    <string name="date">Date</string>
    <string name="date_converter">Date Converter</string>
    <string name="date_copied_clipboard">Copied to clipboard</string>
    <string name="date_exception">The date you entered was not valid!</string>
    <string name="day">Day</string>
    <string name="enable_dari">Enable Dari Months</string>
    <string name="enable_notify">Persistent notification for all date types, needs device restart after turning it off</string>
    <string name="enable_persian_digits">Enable Persian Digits</string>
    <string name="events">Events</string>
    <string name="exit">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="general">General</string>
    <string name="goto_date">Go to date</string>
    <string name="gpl_logo">GPL Logo</string>
    <string name="gps_location">Get location from GPS or network</string>
    <string name="gps_location_help">Other options are not needed if this is possible</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="in_city_time">in</string>
    <string name="iran_time">Iran Time</string>
    <string name="islamic_offset">Islamic offset</string>
    <string name="islamic_offset_summary" />
    <string name="language">Language</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location</string>
    <string name="location_help">If none of them, specify it below</string>
    <string name="logo">Logo</string>
    <string name="longitude">Longitude</string>
    <string name="match_system">Match System</string>
    <string name="month_names">Month Names</string>
    <string name="mount">Month</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="notify_date">Enable Date Notification</string>
    <string name="openDrawer">Open</string>
    <string name="owghat">Pray times</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="persian_digits">Persian Digits</string>
    <string name="playing_athan">Playing Athan</string>
    <string name="pleasewaitgps">Please wait… If nothing appeared after one minute you probably should try other options</string>
    <string name="pray_methods">Calculation methods</string>
    <string name="pray_methods_calculation">Calculation methods for pray times and Qibla compass</string>
    <string name="pray_times_calculation_setting">Pray Times Calculation Setting</string>
    <string name="pushpole_app_name">پوشه</string>
    <string name="pushpole_close_dialog">بستن</string>
    <string name="pushpole_imei_dialog_accept">بله، می پذیرم</string>
    <string name="pushpole_imei_dialog_cancel">نه، نمی پذیرم</string>
    <string name="pushpole_missing_google_play_services_dismiss">نه</string>
    <string name="select_day">Select day</string>
    <string name="select_mount">Select month</string>
    <string name="select_skin">Select a skin</string>
    <string name="select_type_date">Select date type</string>
    <string name="select_widgets_text_color">Select custom color for widgets texts</string>
    <string name="select_year">Select year</string>
    <string name="showing_clock_in_24">Show the clock in 24 hour</string>
    <string name="showing_clock_on_widget">Show the clock on widget</string>
    <string name="showing_iran_time">Widgets and notifications in Iran TimeZone</string>
    <string name="skin">Skin</string>
    <string name="widget_notification_dashclock">Widget, notification bar and DashClock</string>
    <string name="widget_text_color">Widget Text Color</string>
    <string name="year">Year</string>
</resources>